syntax = "proto3";
package api;
option go_package="gitee.com/zekeGitee_admin/tx_gdut_monitor/monitor-alert/internal/send/api/gen;sendpb";

enum Type{
  EMAIL = 0;
  KAFKA = 1;
  NSQ = 2;
  FILE_LOG = 3;
  SYSLOG = 4;
  HTTP_LOG = 5;
}
// 发送配置，包括配置类型，配置内容及配置等级
message Config{
  Type sendType = 1;
  string config = 2;
  int32 level = 3;
}
message InitConfig{
  string agent_id = 1;
  repeated Config config = 2;
}

message UpdateRequest{
  string agent_id = 1;
  int32 config_id = 2;
  Config config = 3;
}

// 以agentID为键值，返回配置列表
message InitRequest{
  map<string, InitConfig> config = 1;
}

message Response{
  int32  Code = 1;
  string Msg = 2;
}

service SendService {
  rpc Update(UpdateRequest) returns (Response);
  rpc Init(InitRequest) returns (Response);
}